--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,1 @@
-REACT_APP_OPEN_AI_GPT_SECRET_KEY = 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
+# REACT_APP_OPEN_AI_GPT_SECRET_KEY = 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
